--- a/t5-gpt-lab/t5-sum.ipynb
+++ b/t5-gpt-lab/t5-sum.ipynb
@@ -6,7 +6,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!export CUDA_VISIBLE_DEVICES=3"
+        "# !export CUDA_VISIBLE_DEVICES=3"
       ]
     },
     {
