--- a/t5-gpt-lab/t5-sum.ipynb
+++ b/t5-gpt-lab/t5-sum.ipynb
@@ -2,21 +2,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# !export CUDA_VISIBLE_DEVICES=3"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
         "import torch\n",
-        "torch.cuda.set_device(1)"
+        "# !export CUDA_VISIBLE_DEVICES=3"    # Useful for running this on local GPUs
+        "# torch.cuda.set_device(0)"
       ]
     },
     {
