--- a/t5-gpt-lab/t5-sum.ipynb
+++ b/t5-gpt-lab/t5-sum.ipynb
@@ -2,6 +2,15 @@
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# !export CUDA_VISIBLE_DEVICES=3"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 2,
       "metadata": {},
       "outputs": [],
