--- a/t5-gpt-lab/t5-sum.ipynb
+++ b/t5-gpt-lab/t5-sum.ipynb
@@ -6,7 +6,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# !export CUDA_VISIBLE_DEVICES=3"
+        ""
       ]
     },
     {
@@ -16,8 +16,8 @@
       "outputs": [],
       "source": [
         "import torch\n",
-        "# !export CUDA_VISIBLE_DEVICES=3"    # Useful for running this on local GPUs
-        "# torch.cuda.set_device(0)"
+        "# !export CUDA_VISIBLE_DEVICES=3    # Useful for running this on local GPUs",
+        "# torch.cuda.set_device(0)",
       ]
     },
     {
