Adding gpt decoding lab

--- a/t5-gpt-lab/t5-sum.ipynb
+++ b/t5-gpt-lab/t5-sum.ipynb
@@ -2,17 +2,6 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "import torch\n",
-        "# !export CUDA_VISIBLE_DEVICES=0        # Useful for running outside of colabs\n",
-        "# torch.cuda.set_device(0)"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 3,
       "metadata": {
         "id": "TXk4O_B___rO"
@@ -29,7 +18,10 @@
       "source": [
         "#! pip install datasets transformers rouge-score nltk torch numpy matplotlib      # << Uncomment to install packages\n",
         "import transformers\n",
-        "print(transformers.__version__)     # Should be >= 4.11.0"
+        "print(transformers.__version__)     # Should be >= 4.11.0\n",
+        "import torch\n",
+        "# !export CUDA_VISIBLE_DEVICES=0        # Useful for running outside of colabs\n",
+        "# torch.cuda.set_device(0)"
       ]
     },
     {
