--- a/t5-gpt-lab/t5-sum.ipynb
+++ b/t5-gpt-lab/t5-sum.ipynb
@@ -11,7 +11,9 @@
         "! pip install datasets transformers rouge-score nltk torch numpy matplotlib      # << Uncomment to install packages\n",
         "import transformers\n",
         "print(transformers.__version__)     # Should be >= 4.11.0\n",
-        "import torch"
+        "import torch\n",
+        "import nltk\n",
+        "nltk.download('punkt')"
       ]
     },
     {
@@ -672,7 +674,7 @@
         "    return times\n",
         "\n",
         "\n",
-        "profile_seq2seq(model, max_len, 1)"
+        "profile_seq2seq(model, 512, 1)"
       ]
     },
     {
