--- a/t5-gpt-lab/t5-sum-solutions.ipynb
+++ b/t5-gpt-lab/t5-sum-solutions.ipynb
@@ -115,21 +115,54 @@
         "\n",
         "def show_random_elements(dataset, num_examples=5):\n",
         "    ## YOUR CODE HERE ##\n",
+        "    assert num_examples <= len(dataset), \"Can't pick more elements than there are in the dataset.\"\n",
+        "    picks = []\n",
+        "    for _ in range(num_examples):\n",
+        "        pick = random.randint(0, len(dataset)-1)\n",
+        "        while pick in picks:\n",
+        "            pick = random.randint(0, len(dataset)-1)\n",
+        "        picks.append(pick)\n",
+        "    \n",
+        "    df = pd.DataFrame(dataset[picks])\n",
+        "    for column, typ in dataset.features.items():\n",
+        "        if isinstance(typ, datasets.ClassLabel):\n",
+        "            df[column] = df[column].transform(lambda i: typ.names[i])\n",
+        "    display(HTML(df.to_html()))\n",
         "\n",
         "\n",
         "def get_token_counts(dataset):\n",
         "    ## YOUR CODE HERE ##\n",
+        "    src_counts = [len(x.split()) for x in dataset['document']]\n",
+        "    tgt_counts = [len(x.split()) for x in dataset['summary']]\n",
+        "    return src_counts, tgt_counts\n",
         "\n",
         "\n",
         "def token_counts_summary(raw_dataset):\n",
         "    ## YOUR CODE HERE ##\n",
+        "    for name,dataset in raw_dataset.items():\n",
+        "        src_counts, tgt_counts = get_token_counts(dataset)\n",
+        "\n",
+        "        mean_cnt = np.mean(src_counts)\n",
+        "        std_cnt = np.std(src_counts)\n",
+        "        print(f'Source documents from dataset: {name:10}\\tMean tokens: {mean_cnt:.2f}\\tStd tokens: {std_cnt:.2f}')\n",
+        "\n",
+        "        mean_cnt = np.mean(tgt_counts)\n",
+        "        std_cnt = np.std(tgt_counts)\n",
+        "        print(f'Target documents from dataset: {name:10}\\tMean tokens: {std_cnt:.2f}\\tStd tokens: {std_cnt:.2f}')\n",
         "\n",
         "\n",
         "def plot_token_counts(dataset):\n",
         "    ## YOUR CODE HERE ##\n",
+        "    src_counts, tgt_counts = get_token_counts(dataset)\n",
+        "    f, (ax0, ax1) = plt.subplots(1,2, figsize=(14,8))\n",
+        "    ax0.hist(src_counts, bins=20)\n",
+        "    ax1.hist(tgt_counts, bins=20)\n",
+        "    ax0.set_title(\"Source Token Count Distribution\")\n",
+        "    ax1.set_title(\"Target Token Count Distribution\")\n",
         "\n",
         "\n",
-        "show_random_elements(raw_datasets[\"val\"])\n",
+        "# show_random_elements(raw_datasets[\"val\"])\n",
+        "\n",
         "plot_token_counts(raw_datasets[\"validation\"])"
       ]
     },
@@ -163,7 +196,11 @@
         "# Try it out below\n",
         "# fake_preds = ## YOUR CODE HERE\n",
         "# fake_labels = ## YOUR CODE HERE\n",
-        "## COMPUTE METRIC HERE ## \n"
+        "## COMPUTE METRIC HERE ## \n",
+        "\n",
+        "fake_preds = [\"i love nlp\", \"nlp is great\"]\n",
+        "fake_labels = [\"i love nlp\", \"nlp is fun\"]\n",
+        "metric.compute(predictions=fake_preds, references=fake_labels)"
       ]
     },
     {
@@ -234,7 +271,9 @@
         "print(tokenizer(\"We love NLP!\"))\n",
         "# print(tokenizer(## YOUR CODE HERE))\n",
         "\n",
-        "## CODE FOR 1.i) HERE ##\n"
+        "## CODE FOR 1.i) HERE ##\n",
+        "tokenizer_ = AutoTokenizer.from_pretrained('bert-base-uncased')\n",
+        "tokenizer_('We love NLP')"
       ]
     },
     {
@@ -298,7 +337,16 @@
         "max_target_length = 128\n",
         "\n",
         "def preprocess_function(examples):\n",
-        "    ## YOUR CODE HERE ##\n"
+        "    ## YOUR CODE HERE ##\n",
+        "    inputs = [prefix + doc for doc in examples[\"document\"]]\n",
+        "    model_inputs = tokenizer(inputs, max_length=max_input_length, truncation=True)\n",
+        "\n",
+        "    # Setup the tokenizer for targets\n",
+        "    with tokenizer.as_target_tokenizer():\n",
+        "        labels = tokenizer(examples[\"summary\"], max_length=max_target_length, truncation=True)\n",
+        "\n",
+        "    model_inputs[\"labels\"] = labels[\"input_ids\"]\n",
+        "    return model_inputs"
       ]
     },
     {
@@ -389,6 +437,14 @@
         "\n",
         "def tok_and_gen(model, tokenizer, input, prefix=''):\n",
         "    ## YOUR CODE HERE ##\n",
+        "    inputs = tokenizer(prefix + input, return_tensors=\"pt\", padding=True)\n",
+        "\n",
+        "    output_sequences = model.generate(\n",
+        "        input_ids=inputs[\"input_ids\"].cuda(),\n",
+        "        attention_mask=inputs[\"attention_mask\"].cuda(),\n",
+        "    )\n",
+        "\n",
+        "    print(f'Using prefix {task_prefix}: ', tokenizer.batch_decode(output_sequences, skip_special_tokens=True))\n",
         "\n",
         "\n",
         "for task_prefix in prefixes:\n",
@@ -538,7 +594,17 @@
       },
       "outputs": [],
       "source": [
-        "## YOUR CODE HERE ##\n"
+        "## YOUR CODE HERE ##\n",
+        "trainer = Seq2SeqTrainer(\n",
+        "    model,\n",
+        "    args,\n",
+        "    train_dataset=tokenized_datasets[\"train\"],\n",
+        "    eval_dataset=tokenized_datasets[\"validation\"],\n",
+        "    data_collator=data_collator,\n",
+        "    tokenizer=tokenizer,\n",
+        "    compute_metrics=compute_metrics\n",
+        ")\n",
+        "trainer.train()"
       ]
     },
     {
@@ -575,6 +641,38 @@
         "    base_decoder_input = base_decoder_input.repeat(batch_size,1)\n",
         "    \n",
         "    ## YOUR CODE HERE ##\n",
+        "    # Benchmark encoder holding decoder fixed\n",
+        "    run_time_profile(model, max_len, base_encoder_input, base_decoder_input, 'encoder', True)\n",
+        "\n",
+        "    # Benchmark decoder holding encoder fixed\n",
+        "    run_time_profile(model, max_len, base_encoder_input, base_decoder_input, 'decoder', True)\n",
+        "\n",
+        "\n",
+        "def run_time_profile(model, max_len, base_encoder_input, base_decoder_input, vary, do_plot=False, n_trials=2):\n",
+        "    times = []\n",
+        "    for i in range(torch.log2(torch.tensor(max_len)).int()+1):\n",
+        "        len = 2 ** i\n",
+        "        \n",
+        "        encoder_input = base_encoder_input\n",
+        "        decoder_input = base_decoder_input\n",
+        "        if vary == 'encoder':\n",
+        "           encoder_input = base_encoder_input.repeat(1,len)\n",
+        "        elif vary == 'decoder':\n",
+        "           decoder_input = base_decoder_input.repeat(1,len) \n",
+        "\n",
+        "        # print(encoder_input.shape, decoder_input.shape)\n",
+        "        ts = time()\n",
+        "        for i in range(n_trials):\n",
+        "            model(input_ids=encoder_input, decoder_input_ids=decoder_input)\n",
+        "        te = time()\n",
+        "        times.append(te - ts)\n",
+        "\n",
+        "    if do_plot:\n",
+        "        plt.plot(times)\n",
+        "        plt.show()\n",
+        "\n",
+        "    return times\n",
+        "\n",
         "\n",
         "profile_seq2seq(model, 512, 1)"
       ]
