--- a/t5-gpt-lab/gpt-gen-solutions.ipynb
+++ b/t5-gpt-lab/gpt-gen-solutions.ipynb
@@ -185,7 +185,33 @@
         "    i, culm_logprobs = 0, 0\n",
         "    new_input_ids = input_ids\n",
         "    ## YOUR CODE HERE ##\n",
+        "    while True:\n",
+        "        # Model forward pass\n",
+        "        all_logits = model(new_input_ids).logits\n",
         "\n",
+        "        # GPT generates a logit per token We want the last logit\n",
+        "        logits = all_logits[:,-1,:]\n",
+        "\n",
+        "        # Compute log probability\n",
+        "        logprobs = F.log_softmax(logits, dim=-1)\n",
+        "\n",
+        "        # Greedy search: take most likely\n",
+        "        next_token = torch.argmax(logits, dim=-1).unsqueeze(1)\n",
+        "\n",
+        "        # Cumulate log probabilites \n",
+        "        culm_logprobs += torch.max(logprobs, dim=-1).values\n",
+        "\n",
+        "        # Append to input_ids\n",
+        "        new_input_ids = torch.cat([new_input_ids, next_token], dim=1)\n",
+        "\n",
+        "        # Print new output\n",
+        "        print(i, tokenizer.batch_decode(new_input_ids, skip_special_tokens=True)[0])\n",
+        "\n",
+        "        # Stopping criteria\n",
+        "        if new_input_ids.size(1) >= max_len:\n",
+        "            break\n",
+        "\n",
+        "        i += 1\n",
         "    return new_input_ids, culm_logprobs"
       ]
     },
@@ -270,7 +296,46 @@
         "def beam_search(model, tokenizer, input_ids, max_len=41, n_beams=3):\n",
         "    i = 0\n",
         "    bsz = input_ids.size(0)\n",
-        "    ## YOUR CODE HERE ##\n"
+        "    ## YOUR CODE HERE ##\n",
+        "    scores = torch.full((input_ids.size(0), n_beams), -1e9)\n",
+        "    scores[:,0] = 0\n",
+        "    scores = scores.view(-1,1)\n",
+        "    new_input_ids = input_ids.repeat(n_beams, 1)\n",
+        "    while True:\n",
+        "        # Model forward pass\n",
+        "        all_logits = model(new_input_ids).logits\n",
+        "\n",
+        "        # GPT generates a logit per token. We want the last logit\n",
+        "        logits = all_logits[:,-1,:]\n",
+        "\n",
+        "        # Compute log probability\n",
+        "        logprobs = F.log_softmax(logits, dim=-1)\n",
+        "        \n",
+        "        # Add past scores\n",
+        "        bs_logprobs = logprobs + scores.expand_as(scores)\n",
+        "\n",
+        "        # Reshape to beam search size\n",
+        "        vocab_sz = logits.size(-1)\n",
+        "        bs_logprobs = bs_logprobs.reshape(bsz, -1)\n",
+        "\n",
+        "        # Beam search: keep n_beams most likely candidates\n",
+        "        beam_scores, indices = torch.topk(bs_logprobs, k=n_beams, dim=-1, sorted=True)\n",
+        "\n",
+        "        next_tokens = indices % vocab_sz\n",
+        "        prev_seq_ixs = torch.flatten((indices - next_tokens) // vocab_sz)\n",
+        "        prev_seqs = new_input_ids[prev_seq_ixs]\n",
+        "\n",
+        "        new_input_ids = torch.cat([prev_seqs, next_tokens.view(-1,1)], dim=1)\n",
+        "        scores = beam_scores.view(*scores.shape)\n",
+        "\n",
+        "        # Print new output\n",
+        "        print(i, tokenizer.batch_decode(new_input_ids, skip_special_tokens=True)[0])\n",
+        "\n",
+        "        i += 1\n",
+        "        # Stopping criteria\n",
+        "        if new_input_ids.size(1) >= max_len:\n",
+        "            break\n",
+        "    return new_input_ids[0], scores[0]\n"
       ]
     },
     {
@@ -325,7 +390,67 @@
         "    i = 0\n",
         "    bsz = input_ids.size(0)\n",
         "    n_gram = max_n_gram\n",
-        "    ## YOUR CODE HERE ##"
+        "    ## YOUR CODE HERE ##\n",
+        "\n",
+        "    # NOTE there are small differences in outputs between this implementation and above one, caused by rounding errors\n",
+        "    scores = torch.full((input_ids.size(0), n_beams), -1e9)\n",
+        "    scores[:,0] = 0\n",
+        "    scores = scores.view(-1,1)\n",
+        "    new_input_ids = input_ids.repeat(n_beams, 1)\n",
+        "    while True:\n",
+        "        # Model forward pass\n",
+        "        all_logits = model(new_input_ids).logits\n",
+        "\n",
+        "        # GPT generates a logit per token. We want the last logit\n",
+        "        logits = all_logits[:,-1,:]\n",
+        "\n",
+        "        # n-gram penalty    \n",
+        "        gens = new_input_ids\n",
+        "        \n",
+        "        # Obtain all generated n_grams so far\n",
+        "        all_gen_n_grams = torch.cat([gens[:,j:j+n_gram] for j in range(gens.size(1)-n_gram+1)], dim=0)\n",
+        "        \n",
+        "        # Filter for uniques\n",
+        "        gen_n_grams = all_gen_n_grams.unique(dim=0)\n",
+        "\n",
+        "        # Compute log probability\n",
+        "        logprobs = F.log_softmax(logits, dim=-1)        \n",
+        "\n",
+        "        # For each of the previous generations, obtain restricted tokens and mask the logits accordingly\n",
+        "        # Ideally this would be vectorized by for readability I have done this as a for loop\n",
+        "        masking = {}\n",
+        "        prev_gens = gens[:,-1:]\n",
+        "        for n,gen in enumerate(prev_gens):\n",
+        "            mask = gen == gen_n_grams[:,0]\n",
+        "            to_mask = torch.masked_select(gen_n_grams[:,1], mask)\n",
+        "            logprobs[n, to_mask] = -1e9 \n",
+        "            masking[n] = to_mask            # For debugging\n",
+        "\n",
+        "        # Add past scores\n",
+        "        bs_logprobs = logprobs + scores.expand_as(scores)\n",
+        "\n",
+        "        # Reshape to beam search size\n",
+        "        vocab_sz = logits.size(-1)\n",
+        "        bs_logprobs = bs_logprobs.reshape(bsz, -1)\n",
+        "\n",
+        "        # Beam search: keep n_beams most likely candidates\n",
+        "        beam_scores, indices = torch.topk(bs_logprobs, k=n_beams, dim=-1, sorted=True)\n",
+        "\n",
+        "        next_tokens = indices % vocab_sz\n",
+        "        prev_seq_ixs = torch.flatten((indices - next_tokens) // vocab_sz)\n",
+        "        prev_seqs = new_input_ids[prev_seq_ixs]\n",
+        "\n",
+        "        new_input_ids = torch.cat([prev_seqs, next_tokens.view(-1,1)], dim=1)\n",
+        "        scores = beam_scores.view(*scores.shape)\n",
+        "\n",
+        "        # Print new output\n",
+        "        print(i, tokenizer.batch_decode(new_input_ids, skip_special_tokens=True)[0])\n",
+        "\n",
+        "        i += 1\n",
+        "        # Stopping criteria\n",
+        "        if new_input_ids.size(1) >= max_len:\n",
+        "            break\n",
+        "    return new_input_ids[0], scores[0]"
       ]
     },
     {
